[package]
name = "a_sheep_assistant"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.85" }
clap = { version = "3.2.21", features = ["derive"] }
anyhow = { version = "1.0.65" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.11", features = ["json"]}

[profile.release]
lto = "thin"
opt-level="s"
codegen-units = 1
panic = "abort"
strip = true